# e-comerce-floreria

./: .dockerignore  .editorconfig  .env.docker  .env.example  .env.notifications.example  .env.prod  .env.prod.example  .env.production.example  .env.railway.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .railway-rebuild  .railwayignore  .trigger-rebuild  ADMIN_SIMPLE_GUIA.md  ANALISIS_COMPLETO_ECOMMERCE.md  CAMBIOS_METODOS_ENVIO.md  CARRITO_ABANDONADO_FRONTEND.md  CARRITO_ABANDONADO_README.md  CLOUDINARY_COMPATIBILITY.md  COMANDOS_DEPLOY.txt  COMO_PROBAR_EMAILS.md  CONFIGURACION_EMAIL_RAILWAY.md  CONFIGURACION_FINAL_DOCKER.md  CONFIGURACION_RECUPERACION_PASSWORD.md  CONFIGURAR_EMAIL_GMAIL.md  CONFIGURAR_SENDGRID.md  DECISION_N8N_DOCKER.md  DEPLOYMENT.md  DEPLOY_AHORA.md  DEPLOY_INSTRUCTIONS.md  Dockerfile  Dockerfile.web  EJEMPLO_MENSAJE_WHATSAPP.md  ENDPOINTS_CHECKLIST.md  ESTADO_ACTUAL.md  FIX_REDIRECCION_PAGO.md  GESTION_PEDIDOS_README.md  GUIA_AGREGAR_IMAGENES.md  (+122 more)
admin_simple/: apps.py  pdf_generator.py  test_view.py  urls.py  views.py
carrito/: admin.py  api.py  api_urls.py  api_views.py  cart.py  context_processors.py  forms.py  models.py  serializers.py  simple_views.py  urls.py  views.py
catalogo/: admin.py  admin_new.py  api.py  api_urls.py  facebook_feed.py  models.py  serializers.py  storage.py  urls.py  utils.py  views.py
core/: admin.py  admin_context.py  api_urls.py  api_views.py  facebook_pixel.py  models.py  translation_service.py  urls.py  views.py
floreria_cristina/: asgi.py  celery.py  csrf_middleware.py  middleware.py  session_serializer.py  settings.py  urls.py  wsgi.py
frontend/: .dockerignore  .env.example  .env.local.example  .env.production  .npmrc  .railway-rebuild  .railway-trigger  CONFIGURACION_WHATSAPP.md  Dockerfile  Dockerfile.prod  middleware.ts  next.config.js  next.config.mjs  nixpacks.toml  package-lock.json  package.json  railway.json  replace-pink-to-green.ps1
nginx/: app.conf  nginx-dev.conf  nginx.conf  nginx.prod.conf
notificaciones/: __init__.py  admin.py  apps.py  models.py  n8n_service.py  resend_backend.py  sendgrid_backend.py  services.py  signals.py  tasks.py  urls.py  views.py
pedidos/: admin.py  api.py  api_urls.py  api_views.py  carrito_abandonado_views.py  currency_service.py  db_utils.py  direct_checkout.py  emails.py  forms.py  mercadopago_service.py  models.py  notificaciones.py  payment_views.py  paypal_service.py  serializers.py  shipping_views.py  simple_checkout.py  simple_views.py  urls.py  utils.py  views.py  views_debug.py  views_zones.py
postgres/: init-db.sh  init.sql
requirements/: base.txt  local.txt
scripts/: add_product_images.py  (+1 more)
(+558 files in other folders)
